dam this doesnt rly work but they show up sorta

--- a/index.html
+++ b/index.html
@@ -112,10 +112,8 @@
 					// make turn rect here
 					ctx.fillStyle = color;
 					// findCoordinatesX(width, height, x, y, randomSize)
-
-
 					var finalxs = findCoordinatesX(this.width, this.height, this.x, this.y, this.randomSize, this.turnAngle);
-					var finalys = findCoordinatesX(this.width, this.height, this.x, this.y, this.randomSize, this.turnAngle);
+					var finalys = findCoordinatesY(this.width, this.height, this.x, this.y, this.randomSize, this.turnAngle);
 
 					// var centerX = [0, 0, 0, 0];
 					// var centerY = [0, 0, 0, 0];
